@@ -1547,6 +1547,7 @@ Doug Wyatt
 Robert Xiao
 Florent Xicluna
 Hirokazu Yamamoto
+Arnon Yaari
 Ka-Ping Yee
 Jason Yeo
 EungJun Yi
